# fsd-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
cmake/: fsdConfig.cmake.in  structuraConfig.cmake.in
examples/: main.cpp
include/fsd/core/: array.hpp  binary_tree.hpp  deque.hpp  double_list.hpp  queue.hpp  search_tree.hpp  single_list.hpp  stack.hpp  vector.hpp
include/fsd/math/algebra/: matrix.hpp  vector.hpp
include/fsd/math/algebra/linear_transform/: linear_transform.hpp  linear_transform_aliases.hpp  linear_transform_fwd.hpp  linear_transform_operations.hpp  linear_transform_storage.hpp
include/fsd/math/algebra/matrix/: matrix.hpp  matrix_algorithms.hpp  matrix_aliases.hpp  matrix_camera.hpp  matrix_fwd.hpp  matrix_operations.hpp  matrix_storage.hpp  matrix_transform.hpp
include/fsd/math/algebra/vector/: vector.hpp  vector_algorithms.hpp  vector_aliases.hpp  vector_fwd.hpp  vector_operations.hpp  vector_storage.hpp
include/fsd/math/geometry/: point.hpp
include/fsd/math/geometry/point/: point.hpp  point_aliases.hpp  point_fwd.hpp  point_operations.hpp  point_storage.hpp
include/structura/core/: array.hpp  binary_tree.hpp  deque.hpp  double_list.hpp  queue.hpp  search_tree.hpp  single_list.hpp  stack.hpp  vector.hpp
include/structura/math/algebra/: matrix.hpp  vector.hpp
include/structura/math/algebra/linear_transform/: linear_transform.hpp  linear_transform_aliases.hpp  linear_transform_fwd.hpp  linear_transform_operations.hpp  linear_transform_storage.hpp
include/structura/math/algebra/matrix/: matrix.hpp  matrix_algorithms.hpp  matrix_aliases.hpp  matrix_camera.hpp  matrix_fwd.hpp  matrix_operations.hpp  matrix_storage.hpp  matrix_transform.hpp
include/structura/math/algebra/vector/: vector.hpp  vector_algorithms.hpp  vector_aliases.hpp  vector_fwd.hpp  vector_operations.hpp  vector_storage.hpp
include/structura/math/geometry/: point.hpp
include/structura/math/geometry/point/: point.hpp  point_aliases.hpp  point_fwd.hpp  point_operations.hpp  point_storage.hpp
src/: AbstractList.h  BinaryTree.h  Deque.h  DoubleList.h  SingleList.h  Stack.h  main.cpp
src/algebra/: linear_transform.hpp  vector.hpp
src/algebra/linear_transform/: linear_transform.hpp  linear_transform_aliases.hpp  linear_transform_fwd.hpp  linear_transform_operations.hpp  linear_transform_storage.hpp
src/algebra/matrix/: matrix.hpp  matrix_camera.hpp  matrix_storage.hpp
src/algebra/vector/: vector.hpp  vector_algorithms.hpp  vector_aliases.hpp  vector_fwd.hpp  vector_operations.hpp  vector_storage.hpp
src/geometry/point/: point.hpp  point_aliases.hpp  point_fwd.hpp  point_operations.hpp  point_storage.hpp
tests/: CMakeLists.txt
tests/core/: array_tests.cpp  binary_tree_tests.cpp  deque_tests.cpp  double_list_tests.cpp  queue_tests.cpp  search_tree_tests.cpp  single_list_tests.cpp  stack_tests.cpp  vector_tests.cpp
